fixed combobox not showing

--- a/src/Pages/Private/Form/Components/ComboBoxQuestion/styles.scss
+++ b/src/Pages/Private/Form/Components/ComboBoxQuestion/styles.scss
@@ -39,7 +39,7 @@
     margin: 15px 0 0 0;
     font-size: 1em;
     color: #5c5c5c;
-    opacity: 50%;
+    opacity: 1;
     font-weight: 600;
     background: rgba(255, 255, 255, 0.3);
     z-index: 1;
